
EXTRA_DIST = \
	axp.1.Makefile axp.2.Makefile axp.Makefile axp.README axp.c axp.h axp.S axp_b.S \
	default.Makefile \
	hppa-cnx.Makefile hppa.Makefile hppa.h hppa.S hppa_b.S \
	i386.README i386.h i386.S i386_b.S \
	ksr1.Makefile ksr1.h ksr1.S ksr1_b.S \
	m88k.Makefile m88k.c m88k.h m88k.S m88k_b.S \
	mips-irix5.S mips.h mips.S mips_b.S \
	null.README null.c null.S \
	solaris.README sparc.h sparc.S sparc_b.S \
	vax.h vax.S vax_b.S \
	ppc.h ppc.S ppc.Makefile \
	setjmp64.c setjmp_b.c setjmp_d.h