
SUBDIRS = tests

TESTS = regress

if CompileOk
PROG = foo
else
PROG = 
endif

check_PROGRAMS = minicc $(PROG)

minicc_SOURCES = \
	String.C \
	Node.C \
	SymTab.C \
	StackMachine.C \
	AsmStore.C \
	main.pa \
	CParser.pa \
	Compiler.pa \
	CodeGen.pa \
	cparse.yy \
	CLexer.pa \
	clex.ll

foo_SOURCES = \
	tests/foo.c \
	tests/foo_lib.c

noinst_HEADERS = \
	AsmStore.h \
	CLexer.h \
	CodeGen.h \
	Node.h \
	SymTab.h \
	CParser.h \
	Compiler.h \
	StackMachine.h \
	Tokens.h \
	CFlexLexer.h \
	Channels.h \
	FlexLexer.h \
	String.h \
	Types.h \
	cparse.h

minicc_DEPENDENCIES = $(DEPENDENCIES)

DEP_FILES=\
	./$(DEPDIR)/main.Po \
	./$(DEPDIR)/String.Po \
	./$(DEPDIR)/CLexer.Po \
	./$(DEPDIR)/CParser.Po \
	./$(DEPDIR)/Compiler.Po \
	./$(DEPDIR)/CodeGen.Po \
	./$(DEPDIR)/AsmStore.Po \
	./$(DEPDIR)/cparse.Po \
	./$(DEPDIR)/clex.Po \
	./$(DEPDIR)/Node.Po \
	./$(DEPDIR)/SymTab.Po
	./$(DEPDIR)/StackMachine.Po

include ./$(DEPDIR)/main.Po
include ./$(DEPDIR)/CLexer.Po
include ./$(DEPDIR)/CParser.Po
include ./$(DEPDIR)/Compiler.Po
include ./$(DEPDIR)/CodeGen.Po

BUILT_SOURCES = clex.cc

EXTRA_DIST = compile_check.pm.in regress

# We use the lemon parser generator, but we assign it to YACC
# so that automake won't bitch about seeing a .yy file and not
# having YACC defined.
YACC = ../lemon/lemon

AM_CXXFLAGS = -I$(top_srcdir)/gc

minicc_LDFLAGS = -L$(top_srcdir)/gc -Wl,-R$(top_srcdir)/gc/.libs

minicc_LDADD =  -lgc -ldl

clex_lflag = -Cfe

foo: tests/foo.c tests/foo_lib.c minicc
	./minicc $(filter %.c,$^)
	$(CXX) -o $@ $(notdir $(patsubst %.c,%.s,$(filter %.c,$^)))

%.cc : %.ll ;
	$(LEX) $($(patsubst %.cc,%_lflag,$(@))) -o$@ $<

%.cc : %.yy ;
	$(YACC) $($(patsubst %.cc,%_yflag,$(@))) $<

lempar.c:
	ln -nfs $(top_srcdir)/tests/lemon/lempar.c

cparse.cc : lempar.c
cparse.h: cparse.cc
CLexer.o: cparse.h
clex.o: cparse.h
cparse.o: cparse.h
# Explicit dependency b/c this header file is generated by lemon.
Node.o: cparse.h

include $(top_srcdir)/tests/Makefile.rules

# For some stupid reason, Automake thinks that this is a C++ project, so
# I have to fool it here.
CXXLINK = $(PLASMA) -o $@

CLEANFILES += clex.cc cparse.cc cparse.h *.s

