
EXTRA_DIST = 	\
		foo.c \
		foo.good \
		foo_lib.c \
		foo_lib.good \
		in1.c \
		in2.c \
		in3.c \
		in4.c \
		in5.c \
		in6.c \
		in7.c \
		in8.c \
		in9.c \
		in10.c \
		test1.out \
		test2.out \
		test3.out \
		test4.out \
		test5.out \
		test6.out \
		test7.out \
		test8.out \
		test9.out \
		test10.out \
		test11.out
